<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/home" />
    <item
        android:id="@+id/buttonChangeLang"
        android:title="@string/change_lang" />

    <item
        android:id="@+id/navigation_logout"
        android:title="@string/logout" />
</menu>